Delete Sonatype and pgp dependencies